# brand-size-chart

./: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  README.md  compose.capability.json  compose.yaml  input.schema.json  pyproject.toml  requirements.txt  versions.yaml  workflow.yaml
brand_size_chart/: __init__.py  codex_stage.py  entrypoint.py  identifier.py  io.py  model.py  source_extractor.py  source_type.py  workflow.py
brand_size_chart/app/: application.py  entrypoint.py  runtime_config.py  source_discovery_chart_write.py  source_discovery_read.py  source_discovery_state.py
brand_size_chart/artifact/: __init__.py  data_layout.py  layout.py  materializer.py  reference_validator.py  table_extraction_chart_reader.py  writer.py
brand_size_chart/codex/: __init__.py  runner.py
brand_size_chart/model/: __init__.py  base.py  brand.py  chart.py  dataset.py  prompt.py  run.py  schema_registry.py  selection.py  source.py  stage.py  stage_context.py  stage_input.py  step_input.py  step_input_source.py  workflow_input.py
brand_size_chart/prompt/: apply.md  discovery.md  extraction.md  renderer.py  selection.md  size_group_key.md  verification.md
brand_size_chart/schema/: brand_input.schema.json  brand_list_parse_result.schema.json  brand_result.schema.json  brand_size_chart.schema.json  canonical_selection.schema.json  canonical_selection_result.schema.json  coverage_decision.schema.json  coverage_decision_result.schema.json  prompt_scope.schema.json  prompt_stage_instruction.schema.json  run_result.schema.json  source_discovery.schema.json  source_discovery_result.schema.json  source_type_summary.schema.json  stage_verification.schema.json  table_extraction.schema.json  table_extraction_artifact.schema.json  table_extraction_artifact_batch_result.schema.json  table_extraction_batch_result.schema.json
brand_size_chart/source/: __init__.py  applicability.py  discovery_database.py  source_type_registry.py
brand_size_chart/stage/: __init__.py  base.py  canonical_selection.py  coverage_decision.py  semantic.py  source_discovery.py  table_extraction.py  workflow_run_prompt_apply.py
brand_size_chart/step/: __init__.py  brand_output.py  canonical_selection.py  coverage_decision.py  instruction.py  source_discovery.py  workflow_run_prompt_apply.py
brand_size_chart/validator/: __init__.py  artifact.py  base.py  (+6 more)
dataset/: brand_size_chart.schema.json
test/: test_brand_list.py  test_codex_browser_stage.py  test_compose_contract.py  test_contract_files.py  test_dbos_class_method_contract.py  test_dbos_workflow_tree.py  test_downstream_corrective.py  test_entrypoint.py  test_identifier.py  test_input_migration.py  test_models.py  test_package.py  test_prompt_renderer.py  test_source_discovery_chart_write.py  test_source_discovery_cutover.py  test_source_discovery_jsonl_append.py  test_source_discovery_read.py  test_source_discovery_state.py  test_steps.py  test_task_5_input_runtime.py  test_task_5_review_regressions.py  test_validators.py  test_workflow_contract.py  test_workflow_image.py  test_workflows.py
(+32 files in other folders)
