[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "brand-size-chart"
version = "0.1.0"
description = "DBOS workflow skeleton for brand size-chart collection"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "dbos>=2.0.0",
  "Jinja2>=3.1.0",
  "pydantic>=2.10.0",
  "pysqlite3-binary>=0.5.4.post2,<0.6",
  "pytest>=8.4.0",
  "PyYAML>=6.0.2",
  "Unidecode>=1.3.8",
  "workflow-container-contract>=0.1.0",
  "workflow-container-runtime>=0.1.0",
]

[project.scripts]
brand-size-chart-run = "brand_size_chart.app.entrypoint:main"

[tool.hatch.build.targets.wheel]
packages = ["brand_size_chart"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[tool.black]
target-version = ["py314"]
line-length = 120

[tool.uv.sources]
workflow-container-contract = { path = "../workflow-container-contract", editable = true }
workflow-container-runtime = { path = "../workflow-container-runtime", editable = true }
